# FastAPI-Webscraper

./: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: deps.py  routes.py
app/core/: config.py  logging.py  scheduler.py
app/models/: models.py
app/services/: base.py  crawler.py  job_store.py  parser.py  storage.py
docker/: Dockerfile  docker-compose.yml
tests/: conftest.py  test_api.py  test_crawler.py  test_storage.py
