[project]
name = "fastapi-webscraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apscheduler>=3.11.1",
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.123.4",
    "httpx>=0.28.1",
    "markdownify>=1.2.2",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "flake8>=7.3.0",
    "mypy>=1.19.0",
    "pylint>=4.0.4",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "types-beautifulsoup4>=4.12.0.20250516",
]
