[project]
name = "fastapi-webscraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "apscheduler>=3.11.1",
    "beautifulsoup4>=4.14.3",
    "deptry>=0.24.0",
    "fastapi[standard]>=0.123.4",
    "markdownify>=1.2.2",
    "nodriver>=0.48.1",
    "pydantic-settings>=2.12.0",
    "setuptools>=80.9.0",
    "types-aiofiles>=25.1.0.20251011",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "flake8>=7.3.0",
    "mypy>=1.19.0",
    "pylint>=4.0.4",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "types-beautifulsoup4>=4.12.0.20250516",
]
